--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roman Numeral Converter</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- <script src="script.js" defer></script> -->
+    <script src="script.js" defer></script>
   </head>
   <body>
     <header class="container">
@@ -30,7 +30,5 @@
       <!--  -->
       <div id="output"></div>
     </main>
-
-    <script src="script.js"></script>
   </body>
 </html>
